Final version of JS DOM article

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -44,7 +44,7 @@ In this part, I am gathering selected elements of modern vanilla JavaScript that
 
 - [If & Switch](./js/js-if-and-switch.mdx)
 - [Loops](./js/js-loops.mdx)
-- [Document Object Model](./js/js-dom.mdx)
+- [Document Object Model (DOM)](./js/js-dom.mdx)
 
 <a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/js/js-if-and-switch">Read about JavaScript</a>
 
